--- a/rustdesk/index.html
+++ b/rustdesk/index.html
@@ -14,7 +14,7 @@
         padding: 0;
     }
 
-    /* ====== CINTA SUPERIOR ====== */
+    /* ===== CINTA SUPERIOR ===== */
     .corporate-ticker {
         position: fixed;
         top: 0;
@@ -24,8 +24,8 @@
         height: 40px;
         display: flex;
         align-items: center;
-        overflow: hidden;
         z-index: 9999;
+        overflow: hidden;
         box-shadow: 0 4px 8px rgba(0,0,0,0.15);
     }
 
@@ -37,36 +37,56 @@
         font-size: 16px;
         padding-left: 100%;
         animation: scrollTicker 20s linear infinite;
-        display: flex;
-        align-items: center;
-        gap: 10px;
     }
 
-    .ticker-text img { height: 28px; }
+    .ticker-text img {
+        height: 28px;
+        vertical-align: middle;
+        margin-right: 10px;
+    }
 
     @keyframes scrollTicker {
         0% { transform: translateX(0); }
         100% { transform: translateX(-100%); }
     }
 
-    /* ====== HEADER ====== */
-    header {
+    /* ===== LOGO Y RESPALDO ===== */
+    .logo-container {
         text-align: center;
-        padding: 70px 20px 20px 20px;
-        position: relative;
+        margin-top: 60px;
     }
 
-    .logo { max-width: 180px; margin-bottom: 8px; }
-    .backup-text { font-size: 14px; color: #555; margin-bottom: 12px; }
-    h1 { font-size: 36px; margin: 5px 0; font-weight: bold; color: #1a1a1a; }
-    .arrow-top { width: 60px; display: block; margin: 10px auto; }
+    .backup-text {
+        font-size: 14px;
+        margin-bottom: 5px;
+        color: #555;
+    }
 
-    /* ====== DESCARGAS ====== */
-    .download-links { margin-top: 20px; display: flex; justify-content: center; flex-wrap: wrap; gap: 12px; }
+    .logo {
+        max-width: 180px;
+        margin-bottom: 10px;
+    }
+
+    h1 {
+        font-size: 36px; 
+        margin: 10px 0;
+        font-weight: bold;
+        color: #1a1a1a;
+    }
+
+    .message {
+        font-size: 16px;
+        margin-bottom: 20px;
+        color: #333;
+    }
+
+    /* ===== BOTONES DE DESCARGA ===== */
     .download-link {
         display: inline-flex;
         align-items: center;
+        justify-content: center;
         gap: 8px;
+        margin: 10px;
         padding: 12px 25px;
         background-color: #007bff;
         color: white;
@@ -74,75 +94,196 @@
         border-radius: 8px;
         font-weight: bold;
         font-size: 16px;
-        box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+        cursor: pointer;
         transition: background-color 0.3s, transform 0.2s;
+        box-shadow: 0 4px 6px rgba(0,0,0,0.1);
     }
-    .download-link:hover { background-color: #0056b3; transform: translateY(-2px); }
-    .download-link img { width: 24px; height: 24px; }
 
-    /* ====== CARRUSEL ====== */
-    .carousel { position: relative; max-width: 800px; margin: 20px auto; overflow: hidden; border-radius: 12px; border: 1px solid rgba(0,0,0,0.05); box-shadow: 0 8px 20px rgba(0,0,0,0.15); }
-    .carousel-track { display: flex; transition: transform 0.5s ease; touch-action: pan-x; }
-    .carousel-track img { width: 100%; flex-shrink: 0; user-select: none; pointer-events: none; }
-    .carousel-arrow { position: absolute; top: 50%; transform: translateY(-50%); background-color: rgba(0,0,0,0.3); color: white; border: none; font-size: 24px; cursor: pointer; padding: 8px 12px; border-radius: 50%; z-index: 10; transition: background-color 0.2s; }
-    .carousel-arrow:hover { background-color: rgba(0,0,0,0.6); }
+    .download-link:hover {
+        background-color: #0056b3;
+        transform: translateY(-2px);
+    }
+
+    .download-link img {
+        width: 24px;
+        height: 24px;
+    }
+
+    /* ===== GIF DESCARGA ===== */
+    .arrow-top {
+        position: fixed;
+        top: 50px;
+        right: 60px;
+        width: 60px;
+        z-index: 1000;
+        pointer-events: none;
+        display: none;
+        animation: float 2s ease-in-out infinite alternate;
+    }
+
+    @keyframes float {
+        0% { transform: translateY(0); }
+        100% { transform: translateY(-8px); }
+    }
+
+    /* ===== CARRUSEL ===== */
+    .carousel-wrapper {
+        max-width: 800px;
+        margin: 30px auto;
+    }
+
+    .carousel {
+        position: relative;
+        overflow: hidden;
+        border-radius: 12px;
+        border: 1px solid rgba(0,0,0,0.05);
+        box-shadow: 0 8px 20px rgba(0,0,0,0.15);
+    }
+
+    .carousel-track {
+        display: flex;
+        transition: transform 0.5s ease;
+    }
+
+    .carousel-track img {
+        width: 100%;
+        flex-shrink: 0;
+        user-select: none;
+        pointer-events: none;
+    }
+
+    .carousel-arrow {
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        background-color: rgba(0,0,0,0.3);
+        color: white;
+        border: none;
+        font-size: 30px;
+        cursor: pointer;
+        padding: 8px 12px;
+        border-radius: 50%;
+        z-index: 10;
+        transition: background-color 0.2s;
+    }
+
+    .carousel-arrow:hover {
+        background-color: rgba(0,0,0,0.6);
+    }
+
     .carousel-arrow-left { left: 10px; }
     .carousel-arrow-right { right: 10px; }
 
-    /* ====== PRODUCTOS ====== */
-    .products { max-width: 900px; margin: 30px auto; display: grid; grid-template-columns: repeat(auto-fit, minmax(220px, 1fr)); gap: 20px; padding: 0 20px; }
-    .product { background: #fff; padding: 15px; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.1); text-align: left; }
-    .product h3 { font-size: 16px; font-weight: bold; margin-bottom: 5px; }
-    .product p { font-size: 14px; margin: 3px 0; }
-    .buy-button {
-        display: inline-flex; align-items: center; gap: 6px; margin-top: 5px;
-        padding: 8px 12px; background-color: #28a745; color: white; border-radius: 6px; text-decoration: none; font-size: 14px; font-weight: bold; transition: background-color 0.2s;
-    }
-    .buy-button:hover { background-color: #1e7e34; }
-    .small-note { font-size: 11px; color: #fff; background-color: #1b5e20; padding: 1px 4px; border-radius: 3px; }
-
-    /* ====== SECCIÓN SOPORTE REMOTO ====== */
+    /* ===== SECCIÓN SOPORTE REMOTO ===== */
     .remote-support {
-        margin: 50px 0;
-        padding: 60px 20px;
-        text-align: center;
+        background: linear-gradient(135deg, #007bff, #00d4ff);
         color: white;
-        background: linear-gradient(135deg, rgba(0,123,255,0.7), rgba(0,198,255,0.7)), url('tech-background.jpg');
-        background-size: cover;
-        background-position: center;
+        text-align: center;
+        padding: 50px 20px;
+        margin: 40px 0;
         border-radius: 12px;
         box-shadow: 0 8px 20px rgba(0,0,0,0.2);
+        background-image: url('fondo-soporte.jpg');
+        background-size: cover;
+        background-position: center;
+        position: relative;
     }
-    .remote-support h2 { font-size: 32px; margin-bottom: 20px; }
-    .remote-support p { font-size: 18px; margin-bottom: 30px; }
+
+    .remote-support h2 {
+        font-size: 28px;
+        margin-bottom: 15px;
+        font-weight: bold;
+    }
+
+    .remote-support p {
+        font-size: 16px;
+        margin-bottom: 25px;
+    }
+
     .remote-support a {
         display: inline-block;
         padding: 12px 25px;
-        background-color: #ff5722;
+        background-color: #28a745;
         color: white;
         font-weight: bold;
-        border-radius: 8px;
         text-decoration: none;
-        font-size: 16px;
+        border-radius: 8px;
         transition: background-color 0.3s;
     }
-    .remote-support a:hover { background-color: #e64a19; }
 
-    /* ====== FOOTER ====== */
+    .remote-support a:hover {
+        background-color: #1e7e34;
+    }
+
+    /* ===== PRODUCTOS ===== */
+    .products {
+        max-width: 1000px;
+        margin: 40px auto;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        gap: 20px;
+        padding: 0 10px;
+    }
+
+    .product {
+        background-color: #ffffff;
+        border-radius: 12px;
+        padding: 20px;
+        width: 250px;
+        box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+        text-align: left;
+    }
+
+    .product h3 {
+        font-size: 18px;
+        margin-bottom: 8px;
+    }
+
+    .product p {
+        font-size: 14px;
+        margin: 3px 0;
+    }
+
+    .buy-button {
+        display: inline-block;
+        margin-top: 8px;
+        padding: 8px 12px;
+        background-color: #28a745;
+        color: white;
+        border-radius: 6px;
+        font-weight: bold;
+        text-decoration: none;
+        font-size: 14px;
+    }
+
+    .buy-button:hover {
+        background-color: #1e7e34;
+    }
+
+    .small-note {
+        font-size: 11px;
+        margin-left: 4px;
+    }
+
+    /* ===== FOOTER ===== */
     footer {
         font-size: 14px;
         color: #555;
         text-align: center;
-        background-color: #f0f2f5;
         padding: 20px;
-        line-height: 1.4;
-        margin-top: 40px;
+        line-height: 1.5;
+        background-color: #f0f2f5;
+        margin-top: 50px;
     }
-    footer a { color: #007bff; text-decoration: none; }
-    footer a:hover { text-decoration: underline; color: #004080; }
 
-    @media (max-width: 600px) {
-        .download-link { width: 80%; font-size: 18px; }
+    footer a {
+        color: #007bff;
+        text-decoration: none;
+    }
+
+    footer a:hover {
+        text-decoration: underline;
     }
 
 </style>
@@ -153,38 +294,50 @@
 <div class="corporate-ticker">
   <div class="ticker-text">
     <img src="rustdesk-logo.png" alt="RustDesk Logo">
-    <img src="solzze-logo.png" alt="Solzze Logo">
-    <img src="rs-logo.png" alt="RS Logo">
-    Distribución verificada de RustDesk por Robert Software – Herramienta de conexión remota profesional, segura y confiable.
+    Distribución verificada de RustDesk por Robert Software – Herramienta de conexión remota profesional.
   </div>
 </div>
 
-<header>
+<!-- GIF FLOTANTE -->
+<img src="flecha-arriba.gif" alt="" class="arrow-top" id="downloadGif">
+
+<!-- LOGO Y RESPALDO -->
+<div class="logo-container">
     <p class="backup-text">Respaldado por:</p>
     <img src="logo.png" alt="RobertSoftware" class="logo">
     <h1>RustDesk</h1>
-    <img src="flecha-arriba.gif" alt="" class="arrow-top" id="downloadGif">
+    <p class="message">Seleccione su sistema operativo para iniciar la descarga de RustDesk.</p>
 
-    <div class="download-links">
-        <a href="https://github.com/rustdesk/rustdesk/releases/download/1.4.2/rustdesk-1.4.2-x86_64.exe" class="download-link" id="btnWin">
-            <img src="windows.svg" alt="Windows"> Descargar para Windows
-        </a>
-        <a href="https://github.com/rustdesk/rustdesk/releases/download/1.4.2/rustdesk-1.4.2-x86_64.dmg" class="download-link" id="btnMac">
-            <img src="macos.svg" alt="macOS"> Descargar para macOS
-        </a>
-    </div>
-</header>
+    <a href="https://github.com/rustdesk/rustdesk/releases/download/1.4.2/rustdesk-1.4.2-x86_64.exe" 
+       class="download-link" id="btnWin">
+       <img src="windows.svg" alt="Windows"> Descargar para Windows
+    </a>
+
+    <a href="https://github.com/rustdesk/rustdesk/releases/download/1.4.2/rustdesk-1.4.2-x86_64.dmg" 
+       class="download-link" id="btnMac">
+       <img src="macos.svg" alt="macOS"> Descargar para macOS
+    </a>
+</div>
 
 <!-- CARRUSEL -->
-<div class="carousel">
-    <button class="carousel-arrow carousel-arrow-left">&#10094;</button>
-    <div class="carousel-track">
-        <img src="1.jpg" alt="RustDesk 1">
-        <img src="2.png" alt="RustDesk 2">
-        <img src="3.png" alt="RustDesk 3">
-        <img src="4.png" alt="RustDesk 4">
+<div class="carousel-wrapper">
+    <div class="carousel">
+        <button class="carousel-arrow carousel-arrow-left">&#10094;</button>
+        <div class="carousel-track">
+            <img src="1.jpg" alt="RustDesk 1">
+            <img src="2.png" alt="RustDesk 2">
+            <img src="3.png" alt="RustDesk 3">
+            <img src="4.png" alt="RustDesk 4">
+        </div>
+        <button class="carousel-arrow carousel-arrow-right">&#10095;</button>
     </div>
-    <button class="carousel-arrow carousel-arrow-right">&#10095;</button>
+</div>
+
+<!-- SOPORTE REMOTO -->
+<div class="remote-support">
+    <h2>Soporte Remoto Profesional</h2>
+    <p>Conéctese con nuestro equipo de soporte técnico de manera segura y confiable.</p>
+    <a href="https://wa.me/51945482880" target="_blank">Solicitar Soporte Remoto</a>
 </div>
 
 <!-- PRODUCTOS -->
@@ -208,19 +361,24 @@
         <a href="https://wa.me/51945482880" target="_blank" class="buy-button">Comprar ahora <span class="small-note">WhatsApp</span></a>
     </div>
     <div class="product">
+        <h3>Software de Diseño y Creatividad</h3>
+        <p>Acceso a herramientas de diseño profesional con suscripción anual para proyectos creativos.</p>
+        <p>Precio Perú: S/. 195 / 1 año | Chile: $69,500 CLP</p>
+        <a href="https://wa.me/51945482880" target="_blank" class="buy-button">Comprar ahora <span class="small-note">WhatsApp</span></a>
+    </div>
+    <div class="product">
         <h3>Edición de Video</h3>
         <p>Programas de edición de video profesionales para crear contenido de calidad.</p>
         <p>Precio Perú: S/. 20 | Chile: $9,800 CLP</p>
         <a href="https://wa.me/51945482880" target="_blank" class="buy-button">Comprar ahora <span class="small-note">WhatsApp</span></a>
     </div>
+    <div class="product">
+        <h3>Producción Musical</h3>
+        <p>Software para composición, mezcla y edición de audio profesional.</p>
+        <p>Precio Perú: S/. 20 | Chile: $9,500 CLP</p>
+        <a href="https://wa.me/51945482880" target="_blank" class="buy-button">Comprar ahora <span class="small-note">WhatsApp</span></a>
+    </div>
 </div>
-
-<!-- SOPORTE REMOTO -->
-<section class="remote-support">
-    <h2>Solicitar Soporte Remoto</h2>
-    <p>Conéctese con nuestros técnicos profesionales para asistencia inmediata y segura en su equipo.</p>
-    <a href="https://wa.me/51945482880" target="_blank">Solicitar Soporte</a>
-</section>
 
 <footer>
     <p><em>Asistencia remota profesional y confiable para sus sistemas y equipos, gestionada por Robert Software.</em></p>
@@ -232,31 +390,28 @@
 </footer>
 
 <script>
-    // DESCARGAS
+    // DESCARGAS CON GIF
     const gif = document.getElementById('downloadGif');
-    function handleDownload(url, counterUrl) {
-        fetch(counterUrl)
-            .then(res => res.json())
-            .then(data => {
-                console.log("Contador actualizado:", data);
-                const a = document.createElement('a');
-                a.href = url;
-                a.download = url.split('/').pop();
-                document.body.appendChild(a);
-                a.click();
-                document.body.removeChild(a);
-            })
-            .catch(err => console.error("Error al incrementar contador:", err));
+
+    function handleDownload(url) {
+        gif.style.display = 'block';
+        const a = document.createElement('a');
+        a.href = url;
+        a.download = url.split('/').pop();
+        document.body.appendChild(a);
+        a.click();
+        document.body.removeChild(a);
+        setTimeout(()=>{gif.style.display='none';}, 3000);
     }
 
-    document.getElementById('btnWin').addEventListener('click', e => {
-        e.preventDefault(); gif.style.display = 'block';
-        handleDownload("https://github.com/rustdesk/rustdesk/releases/download/1.4.2/rustdesk-1.4.2-x86_64.exe", "https://api.counterapi.dev/v2/rs/Win/up");
+    document.getElementById('btnWin').addEventListener('click', e=>{
+        e.preventDefault();
+        handleDownload("https://github.com/rustdesk/rustdesk/releases/download/1.4.2/rustdesk-1.4.2-x86_64.exe");
     });
 
-    document.getElementById('btnMac').addEventListener('click', e => {
-        e.preventDefault(); gif.style.display = 'block';
-        handleDownload("https://github.com/rustdesk/rustdesk/releases/download/1.4.2/rustdesk-1.4.2-x86_64.dmg", "https://api.counterapi.dev/v2/rs/Mac/up");
+    document.getElementById('btnMac').addEventListener('click', e=>{
+        e.preventDefault();
+        handleDownload("https://github.com/rustdesk/rustdesk/releases/download/1.4.2/rustdesk-1.4.2-x86_64.dmg");
     });
 
     // CARRUSEL
@@ -264,24 +419,16 @@
     const slides = Array.from(track.children);
     const prevButton = document.querySelector('.carousel-arrow-left');
     const nextButton = document.querySelector('.carousel-arrow-right');
-    let index = 0; const total = slides.length;
+    let index = 0;
 
-    function updateCarousel() { track.style.transform = `translateX(-${index * 100}%)`; }
+    function updateCarousel() {
+        track.style.transform = `translateX(-${index * 100}%)`;
+    }
 
-    nextButton.addEventListener('click', () => { index = (index + 1) % total; updateCarousel(); });
-    prevButton.addEventListener('click', () => { index = (index - 1 + total) % total; updateCarousel(); });
-    setInterval(() => { index = (index + 1) % total; updateCarousel(); }, 5000);
+    nextButton.addEventListener('click', ()=>{ index = (index+1)%slides.length; updateCarousel(); });
+    prevButton.addEventListener('click', ()=>{ index = (index-1+slides.length)%slides.length; updateCarousel(); });
 
-    let startX = 0; let isDragging = false;
-    track.addEventListener('touchstart', e => { startX = e.touches[0].clientX; isDragging = true; });
-    track.addEventListener('touchmove', e => {
-        if(!isDragging) return;
-        const moveX = e.touches[0].clientX;
-        const diff = startX - moveX;
-        if(diff > 50){ index = (index + 1) % total; updateCarousel(); isDragging=false; }
-        else if(diff < -50){ index = (index - 1 + total) % total; updateCarousel(); isDragging=false; }
-    });
-    track.addEventListener('touchend', () => { isDragging = false; });
+    setInterval(()=>{ index = (index+1)%slides.length; updateCarousel(); }, 5000);
 </script>
 
 </body>
