--- a/rustdesk/index.html
+++ b/rustdesk/index.html
@@ -71,50 +71,6 @@
         height: 24px;
     }
 
-    .arrow-top {
-        position: fixed;
-        top: 50px;
-        right: 60px;
-        width: 60px;
-        z-index: 1000;
-        pointer-events: none;
-        display: none;
-        animation: float 2s ease-in-out infinite alternate;
-    }
-
-    @keyframes float {
-        0% { transform: translateY(0); }
-        100% { transform: translateY(-8px); }
-    }
-
-    footer {
-        font-size: 14px;
-        color: #555;
-        text-align: center;
-        background-color: #f0f2f5;
-        padding: 10px 20px;
-        line-height: 1.4;
-        max-width: 800px;
-        margin: 40px auto 0;
-    }
-
-    footer a {
-        color: #007bff;
-        text-decoration: none;
-    }
-
-    footer a:hover {
-        text-decoration: underline;
-        color: #004080;
-    }
-
-    @media (max-width: 600px) {
-        .download-link {
-            width: 80%;
-            font-size: 18px;
-        }
-    }
-
     /* ====== CINTA SUPERIOR ORIGINAL ====== */
     .corporate-ticker {
         position: fixed;
@@ -157,8 +113,8 @@
     /* ====== CARRUSEL ====== */
     .carousel {
         position: relative;
-        max-width: 800px;
-        margin: 40px auto;
+        max-width: 700px;
+        margin: 20px auto;
         overflow: hidden;
         border-radius: 12px;
         border: 1px solid rgba(0,0,0,0.05);
@@ -201,26 +157,23 @@
     .carousel-arrow-left { left: 10px; }
     .carousel-arrow-right { right: 10px; }
 
-    /* ====== PRODUCTOS DEBAJO DEL CARRUSEL ====== */
-    .products-section {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        gap: 20px;
-        margin-top: 40px;
-    }
-
-    .product {
-        background-color: #ffffff;
-        border-radius: 12px;
-        padding: 20px;
-        width: 240px;
-        box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+    /* ====== PRODUCTOS ====== */
+    .products-column {
+        max-width: 700px;
+        margin: 0 auto;
         text-align: left;
     }
 
+    .product {
+        margin-bottom: 20px;
+        background-color: #ffffff;
+        border-radius: 12px;
+        padding: 15px;
+        box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+    }
+
     .product h3 {
-        font-size: 16px;
+        font-size: 18px;
         font-weight: bold;
         margin-bottom: 5px;
     }
@@ -258,65 +211,92 @@
         border-radius: 3px;
     }
 
-    /* ====== SOLICITAR SOPORTE REMOTO ====== */
-    .support-section {
-        margin-top: 60px;
-        padding: 50px 20px;
-        border-radius: 12px;
-        background: linear-gradient(135deg, #0056b3, #00aaff); /* DEGRADADO */
-        color: white;
-        text-align: center;
-        position: relative;
-        overflow: hidden;
-    }
-
-    .support-section h2 {
-        font-size: 28px;
-        font-weight: bold;
-        margin-bottom: 15px;
-    }
-
-    .support-section p {
-        font-size: 16px;
-        margin-bottom: 25px;
-    }
-
-    .support-section .support-button {
+    /* ====== BOTON SOPORTE REMOTO CON GRADIENTE ANIMADO ====== */
+    .support-button {
         display: inline-flex;
         align-items: center;
         justify-content: center;
         gap: 10px;
-        padding: 14px 25px;
-        background-color: #ff4b2b;
-        color: white;
+        padding: 18px 30px;
         font-weight: bold;
-        border-radius: 8px;
+        border-radius: 10px;
         text-decoration: none;
-        font-size: 16px;
-        transition: background-color 0.3s;
+        font-size: 18px;
+        color: white;
+        background: linear-gradient(270deg, #00aaff, #0056b3, #00ffff);
+        background-size: 600% 600%;
+        animation: gradientMove 4s ease infinite;
+        transition: transform 0.3s;
+        margin: 20px 0;
     }
 
-    .support-section .support-button:hover {
-        background-color: #ff416c;
+    .support-button:hover {
+        transform: scale(1.05);
+    }
+
+    @keyframes gradientMove {
+        0% { background-position: 0% 50%; }
+        50% { background-position: 100% 50%; }
+        100% { background-position: 0% 50%; }
+    }
+
+    /* ====== GIF FLECHA ARRIBA ====== */
+    .arrow-top {
+        position: fixed;
+        top: 60px;
+        right: 60px;
+        width: 60px;
+        z-index: 1000;
+        pointer-events: none;
+        display: none;
+        animation: float 2s ease-in-out infinite alternate;
+    }
+
+    @keyframes float {
+        0% { transform: translateY(0); }
+        100% { transform: translateY(-8px); }
+    }
+
+    /* ====== FOOTER ====== */
+    footer {
+        font-size: 14px;
+        color: #555;
+        text-align: center;
+        background-color: #f0f2f5;
+        padding: 20px;
+        line-height: 1.4;
+        max-width: 1000px;
+        margin: 40px auto 0;
+    }
+
+    footer a {
+        color: #007bff;
+        text-decoration: none;
+    }
+
+    footer a:hover {
+        text-decoration: underline;
+        color: #004080;
     }
 
 </style>
 </head>
 <body>
 
-<!-- CINTA SUPERIOR ORIGINAL -->
+<!-- CINTA SUPERIOR -->
 <div class="corporate-ticker">
   <div class="ticker-text">
     <img src="rustdesk-logo.png" alt="RustDesk Logo">
     <img src="solzze-logo.png" alt="Solzze Logo">
     <img src="rs-logo.png" alt="RS Logo">
-    Distribución verificada de RustDesk por Robert Software – Herramienta de conexión remota utilizada para brindar soporte técnico profesional, seguro y confiable a nuestros clientes. Descargue las versiones más recientes y certificadas para Windows y macOS.
+    Distribución verificada de RustDesk por Robert Software – Herramienta de conexión remota profesional, segura y confiable.
   </div>
 </div>
 
 <!-- GIF -->
 <img src="flecha-arriba.gif" alt="" class="arrow-top" id="downloadGif">
 
+<!-- RESPALDO -->
 <p class="backup-text">Respaldado por:</p>
 <img src="logo.png" alt="RobertSoftware" class="logo">
 
@@ -347,8 +327,8 @@
     <button class="carousel-arrow carousel-arrow-right">&#10095;</button>
 </div>
 
-<!-- PRODUCTOS DEBAJO DEL CARRUSEL -->
-<div class="products-section">
+<!-- SECCIÓN DE PRODUCTOS -->
+<div class="products-column">
     <div class="product">
         <h3>Software Ofimático</h3>
         <p>Soluciones de oficina completas para documentos, hojas de cálculo y presentaciones.</p>
@@ -366,14 +346,6 @@
         </a>
     </div>
     <div class="product">
-        <h3>Gestión de PDF</h3>
-        <p>Edición, creación y conversión de archivos PDF de forma permanente.</p>
-        <p>Precio Perú: S/. 15 | Chile: $9,500 CLP</p>
-        <a href="https://wa.me/51945482880" target="_blank" class="buy-button">
-            Comprar ahora <span class="small-note">WhatsApp</span>
-        </a>
-    </div>
-    <div class="product">
         <h3>Edición de Video</h3>
         <p>Programas de edición de video profesionales para crear contenido de calidad.</p>
         <p>Precio Perú: S/. 20 | Chile: $9,800 CLP</p>
@@ -383,49 +355,42 @@
     </div>
 </div>
 
-<!-- SECCIÓN SOLICITAR SOPORTE REMOTO -->
-<div class="support-section">
-    <h2>Solicitar Soporte Remoto</h2>
-    <p>Reciba asistencia profesional en sus sistemas y equipos de manera rápida y segura. Haga clic en el botón para conectarse con nuestro equipo de soporte remoto.</p>
-    <a href="https://wa.me/51945482880" target="_blank" class="support-button">
-        Conectar Ahora
-    </a>
-</div>
+<!-- BOTON SOPORTE REMOTO -->
+<a href="https://wa.me/51945482880" target="_blank" class="support-button">
+    Solicitar Soporte Remoto
+</a>
+
+<!-- FOOTER -->
+<footer>
+    <p><em>Asistencia remota profesional y confiable para sus sistemas y equipos, gestionada por Robert Software.</em></p>
+    <p>© 2025 Robert Software. Todos los derechos reservados.</p>
+    <p>Para soporte técnico o consultas, contáctenos a través de WhatsApp: 
+        <a href="https://wa.me/51945482880" target="_blank">945482880</a> 
+        o correo: <a href="mailto:rs.robertsoftware@gmail.com">rs.robertsoftware@gmail.com</a>
+    </p>
+</footer>
 
 <script>
     const gif = document.getElementById('downloadGif');
 
-    function handleDownload(url, counterUrl) {
-        fetch(counterUrl)
-            .then(res => res.json())
-            .then(data => {
-                console.log("Contador actualizado:", data);
-                const a = document.createElement('a');
-                a.href = url;
-                a.download = url.split('/').pop();
-                document.body.appendChild(a);
-                a.click();
-                document.body.removeChild(a);
-            })
-            .catch(err => console.error("Error al incrementar contador:", err));
+    function handleDownload(url) {
+        gif.style.display = 'block';
+        const a = document.createElement('a');
+        a.href = url;
+        a.download = url.split('/').pop();
+        document.body.appendChild(a);
+        a.click();
+        document.body.removeChild(a);
     }
 
     document.getElementById('btnWin').addEventListener('click', e => {
         e.preventDefault();
-        gif.style.display = 'block';
-        handleDownload(
-            "https://github.com/rustdesk/rustdesk/releases/download/1.4.2/rustdesk-1.4.2-x86_64.exe",
-            "https://api.counterapi.dev/v2/rs/Win/up"
-        );
+        handleDownload("https://github.com/rustdesk/rustdesk/releases/download/1.4.2/rustdesk-1.4.2-x86_64.exe");
     });
 
     document.getElementById('btnMac').addEventListener('click', e => {
         e.preventDefault();
-        gif.style.display = 'block';
-        handleDownload(
-            "https://github.com/rustdesk/rustdesk/releases/download/1.4.2/rustdesk-1.4.2-x86_64.dmg",
-            "https://api.counterapi.dev/v2/rs/Mac/up"
-        );
+        handleDownload("https://github.com/rustdesk/rustdesk/releases/download/1.4.2/rustdesk-1.4.2-x86_64.dmg");
     });
 
     const track = document.querySelector('.carousel-track');
@@ -472,15 +437,6 @@
 
     track.addEventListener('touchend', () => { isDragging = false; });
 </script>
-
-<footer>
-    <p><em>Asistencia remota profesional y confiable para sus sistemas y equipos, gestionada por Robert Software.</em></p>
-    <p>© 2025 Robert Software. Todos los derechos reservados.</p>
-    <p>Para soporte técnico o consultas, contáctenos a través de WhatsApp: 
-        <a href="https://wa.me/51945482880" target="_blank">945482880</a> 
-        o correo: <a href="mailto:rs.robertsoftware@gmail.com">rs.robertsoftware@gmail.com</a>
-    </p>
-</footer>
 
 </body>
 </html>
